[package]
name = "challenger"
version = "0.1.0"
authors = ["smatthewenglish <s.matthew.english@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1", features = ["derive"] }